--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign Up</h1>
+<%= form_for @user do |f| %>
+	<%=f.text_field :first_name, placeholder: "First Name" %><br>
+	<%=f.text_field :last_name, placeholder: "Last Name" %><br>
+	<%=f.email_field :email, placeholder: "Email" %><br>
+	<%=f.password_field :password, placeholder: "Password" %><br>
+	<hr>
+	<%= f.submit "Sign Up" %>
+
+<% end %>
+
+
