--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,12 @@
 <h1>Profile Page</h1>
 <div>
-	<p><%=@current_user.first_name %></p>
-	<p><%=@current_user.last_name %></p>
-	<p><%=@current_user.email %></p>
+	<p><%=current_user.first_name %></p>
+	<p><%=current_user.last_name %></p>
+	<p><%=current_user.email %></p>
 </div>
 <h3>My Recipe</h3>
-<p><%=@current_user.recipes %></p>
+<% current_user.recipes.each do |recipe| %>
+	<p> <%= recipe.name %></p><br>
+	<p> <%= recipe.instructions %></p>
+<% end %>
+
