--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Recipe Book</h1>
 <hr>
 <% @recipes.each do |recipe|%>
-	<p><%= recipe.name %> - <%= recipe.instructions %></p>
+	<p><%= recipe.name %> - <%= recipe.instructions %> <%= link_to "View Recipe", recipe_path(recipe) %></p>
 <% end %>
 <% if current_user %>
 	<%= link_to "Add recipes", new_recipe_path %>
